--- a/mklivecd/src/rc.sysinit.in
+++ b/mklivecd/src/rc.sysinit.in
@@ -20,7 +20,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: rc.sysinit.in,v 1.14 2004/01/29 10:13:51 jaco Exp $
+# $Id: rc.sysinit.in,v 1.15 2004/01/29 10:23:52 jaco Exp $
 #
 
 export PATH=/initrd/bin:/initrd/sbin:/initrd/usr/bin:/initrd/usr/sbin:/bin:/sbin:/usr/bin:/usr/sbin
@@ -160,6 +160,113 @@ execshell() {
 }
 
 
+### setup an overlay fs
+setuproot_overlay() {
+	echo "Root overlay not currently supported"
+	execshell
+}
+
+
+### setup a copy filesystm
+setuproot_normal() {
+	docmd   "Building root filesystem" \
+		"cd /" \
+		"touch fastboot" \
+		"rm -rf /lib && mkdir -p /lib" \
+		"cd $MNTLIVECD/lib ; \
+		for f in *; do \
+			case \$f in \
+				dev-state) \
+					mkdir -p /lib/\$f ; \
+					;; \
+				modules) \
+					mkdir -p /lib/\$f ; \
+					for k in \$f/*; do \
+						if \`echo \$k | grep -q \$f/$KERNELVER\`; then \
+							mkdir -p /lib/\$k ; \
+							for s in \$k/*; do \
+								if [ -f $MNTLIVECD/lib/\$s ]; then \
+									cp $MNTLIVECD/lib/\$s /lib/\$s ; \
+									chmod 644 /lib/\$s ; \
+								else \
+									mkdir -p /lib/\$s ; \
+									for d in \`find \$s -type d\`; do \
+										mkdir -p /lib/\$d || true; \
+										for m in \$d/*; do \
+											[ -f $MNTLIVECD/lib/\$m ] && ln -sf $MNTLIVECD/lib/\$m /lib/\$m || true; \
+										done \
+									done \
+								fi \
+							done \
+						else \
+							ln -sf $MNTLIVECD/lib/\$k /lib/\$k || true; \
+						fi \
+					done \
+					;; \
+				*) \
+					ln -sf $MNTLIVECD/lib/\$f /lib/\$f || true; \
+					;; \
+			esac \
+		done" \
+		"rm -rf /bin && ln -sf $MNTLIVECD/bin" \
+		"rm -rf /boot && ln -sf $MNTLIVECD/boot" \
+		"rm -rf /opt && ln -sf $MNTLIVECD/opt" \
+		"rm -rf /sbin && ln -sf $MNTLIVECD/sbin" \
+		"rm -rf /usr && ln -sf $MNTLIVECD/usr" \
+		"mkdir -p /mnt && ln -sf $MNTCDROM /mnt/cdrom"
+	set_progress
+	PREV=
+	docmd   "Creating /var structure" \
+		"rm -rf /var && mkdir -p /var ; " \
+		"for d in \`find $MNTLIVECD/var/ -type d\`; do \
+			CURR=\${d#$MNTLIVECD/var/} ; \
+			[ -n \"\$PREV\" ] && CURR=\"\$PREV \$CURR\" ; \
+			if [ -e \"$MNTLIVECD/var/\$CURR\" ]; then \
+				d=\"\$CURR\" ; \
+				case \$d in \
+					lib/rpm*|lib/urpmi*|lib/samba*|lib/mysql*) \
+						[ ! -e \"/var/\$d\" ] && ln -sf \"$MNTLIVECD/var/\$d\" \"/var/\$d\" || true; \
+						;; \
+					cache*|db*|lib*|local*|lock*|log*|mail*|mtink*|nis*|opt*|preserve*|run*|spool*|yp*) \
+						mkdir -p \"/var/\$d\" || true ; \
+						$MNTLIVECD/bin/chown --reference=\"$MNTLIVECD/var/\$d\" \"/var/\$d\" ; \
+						$MNTLIVECD/bin/chmod --reference=\"$MNTLIVECD/var/\$d\" \"/var/\$d\" ; \
+						;; \
+					tmp*) \
+						;; \
+					*) \
+						[ ! -e \"/var/\$d\" ] && ln -sf \"$MNTLIVECD/var/\$d\" \"/var/\$d\" || true; \
+						;; \
+				esac ; \
+				CURR=\"\" ; \
+			fi ; \
+			PREV=\"\$CURR\" ; \
+		done" \
+		"mkdir -p /var/lock/subsys" \
+		"mkdir -p /var/log && touch /var/log/wtmp" \
+		"mkdir -p /var/run && touch /var/run/utmp" \
+		"ln -sf /tmp /var/tmp"
+	set_progress
+	docmd   "Creating /etc structure" \
+		"rm -rf /etc && cp -a $MNTLIVECD/etc /" \
+		"mkdir -p /etc/livecd/hwdetect" \
+		"chmod a+rw /etc" \
+		"rm -rf /etc/fstab && touch /etc/fstab" \
+		"echo 'none      /proc proc  defaults 0 0' >/etc/fstab" \
+		"echo 'none      /dev  devfs defaults 0 0' >>/etc/fstab" \
+		"echo '/dev/rd/3 /     ext2  defaults 0 0' >>/etc/fstab" \
+		"rm -rf /etc/mtab && touch /etc/mtab" \
+		"rm -rf /etc/modules.conf && touch /etc/modules.conf" \
+		"rm -rf /etc/rc.d/rc3.d/S05harddrake" \
+		"rm -rf /etc/rc.d/rc5.d/S05harddrake"
+	set_progress
+	docmd   "Creating user directories" \
+		"cp -a $MNTLIVECD/root /" \
+		"cp -a $MNTLIVECD/home /"
+	set_progress
+}
+
+
 ### Setup the root fs
 setuproot() {
 	# setup translucency (if available)
@@ -174,187 +281,13 @@ setuproot() {
 	set_progress
 
 	OVERLAY=
-	[ -d /proc/sys/translucency ] && OVERLAY=1
-	[ -f /initrd/lib/libplasticfs.so.0 ] && OVERLAY=1
 	if [ -n "$OVERLAY" ]; then
-		ltmp="/tmp/livecd"
-		docmd   "Building root filesystem" \
-			"cd /" \
-			"touch fastboot" \
-			"for d in $MNTLIVECD/*; do \
-				d=\${d#$MNTLIVECD} ; \
-				if [ -d $MNTLIVECD/\$d ]; then \
-					case \$d in \
-						dev|proc|mnt|tmp|sys|udev) \
-							mkdir -p /\$d ; \
-							;; \
-						*) \
-							rm -rf /\$d ; \
-							ln -s $MNTLIVECD\$d /\$d || true ; \
-							;; \
-					esac ; \
-				fi ; \
-			done" \
-			"mkdir -p /mnt/cdrom && mount -n -o bind $MNTCDROM /mnt/cdrom"
-		set_progress
-			
-		if [ -f /initrd/lib/libplasticfs.so.0 ]; then
-			echo -n "Creating filesystem overlay: "
-			rm -rf /lib 
-			mkdir -p /lib
-			cd $MNTLIVECD
-			for f in lib/*; do 
-				f=${f#lib/}
-				case $f in 
-					dev-state) 
-						mkdir -p /lib/$f
-						;;
-					modules)
-						mkdir -p /lib/$f
-						VP="viewpath /lib/$f $MNTLIVECD/lib/$f"
-						[ -n "$PLASTICFS" ] && PLASTICFS="$PLASTICFS | $VP" || PLASTICFS="$VP"
-						;;
-					*)
-						ln -sf $MNTLIVECD/lib/$f /lib/$f
-						;;
-				esac
-			done
-			cd /
-			for d in etc home root var; do
-				rm -rf /$d
-				mkdir -p /$d
-				VP="viewpath /$d $MNTLIVECD/$d"
-				[ -n "$PLASTICFS" ] && PLASTICFS="$PLASTICFS | $VP" || PLASTICFS="$VP"
-			done
-			export LD_PRELOAD=/initrd/lib/libplasticfs.so.0
-			export PLASTICFS="$PLASTICFS"
-			printok
-			set_progress
-		else
-			docmd   "Creating filesystem overlay" \
-				"for t in etc home lib root usr var; do mkdir -p $ltmp/\$t ; done" \
-				"echo '$MNTLIVECD/etc -> $ltmp/etc' >/proc/sys/translucency/0" \
-				"echo '$MNTLIVECD/home -> $ltmp/home' >/proc/sys/translucency/1" \
-				"echo '$MNTLIVECD/lib -> $ltmp/lib' >/proc/sys/translucency/2" \
-				"echo '$MNTLIVECD/root -> $ltmp/root' >/proc/sys/translucency/3" \
-				"echo '$MNTLIVECD/var -> $ltmp/var' >/proc/sys/translucency/4"
-			set_progress
-		fi
-		
-		docmd   "Creating /var structure" \
-			"mkdir -p /var/lock/subsys" \
-			"mkdir -p /var/log && touch /var/log/wtmp" \
-			"mkdir -p /var/run && touch /var/run/utmp" \
-			"mkdir -p /var/tmp"
-		set_progress
-		docmd   "Creating /etc structure" \
-			"rm -rf /etc && mkdir -p /etc/livecd/hwdetect" \
-			"echo 'none      /proc proc  defaults 0 0' >/etc/fstab" \
-			"echo 'none      /dev  devfs defaults 0 0' >>/etc/fstab" \
-			"echo '/dev/rd/3 /     ext2  defaults 0 0' >>/etc/fstab" \
-			"rm -rf /etc/mtab && touch /etc/mtab" \
-			"rm -rf /etc/modules.conf && touch /etc/modules.conf" \
-			"rm -rf /etc/rc.d/rc3.d/S05harddrake" \
-			"rm -rf /etc/rc.d/rc5.d/S05harddrake"
-		set_progress
+		setuproot_overlay
 	else
-		docmd   "Building root filesystem" \
-			"cd /" \
-			"touch fastboot" \
-			"rm -rf /lib && mkdir -p /lib" \
-			"cd $MNTLIVECD/lib ; \
-			for f in *; do \
-				case \$f in \
-					dev-state) \
-						mkdir -p /lib/\$f ; \
-						;; \
-					modules) \
-						mkdir -p /lib/\$f ; \
-						for k in \$f/*; do \
-							if \`echo \$k | grep -q \$f/$KERNELVER\`; then \
-								mkdir -p /lib/\$k ; \
-								for s in \$k/*; do \
-									if [ -f $MNTLIVECD/lib/\$s ]; then \
-										cp $MNTLIVECD/lib/\$s /lib/\$s ; \
-										chmod 644 /lib/\$s ; \
-									else \
-										mkdir -p /lib/\$s ; \
-										for d in \`find \$s -type d\`; do \
-											mkdir -p /lib/\$d || true; \
-											for m in \$d/*; do \
-												[ -f $MNTLIVECD/lib/\$m ] && ln -sf $MNTLIVECD/lib/\$m /lib/\$m || true; \
-											done \
-										done \
-									fi \
-								done \
-							else \
-								ln -sf $MNTLIVECD/lib/\$k /lib/\$k || true; \
-							fi \
-						done \
-						;; \
-					*) \
-						ln -sf $MNTLIVECD/lib/\$f /lib/\$f || true; \
-						;; \
-				esac \
-			done" \
-			"rm -rf /bin && ln -sf $MNTLIVECD/bin" \
-			"rm -rf /boot && ln -sf $MNTLIVECD/boot" \
-			"rm -rf /opt && ln -sf $MNTLIVECD/opt" \
-			"rm -rf /sbin && ln -sf $MNTLIVECD/sbin" \
-			"rm -rf /usr && ln -sf $MNTLIVECD/usr" \
-			"mkdir -p /mnt && ln -sf $MNTCDROM /mnt/cdrom"
-		set_progress
-		PREV=
-		docmd   "Creating /var structure" \
-			"rm -rf /var && mkdir -p /var ; " \
-			"for d in \`find $MNTLIVECD/var/ -type d\`; do \
-				CURR=\${d#$MNTLIVECD/var/} ; \
-				[ -n \"\$PREV\" ] && CURR=\"\$PREV \$CURR\" ; \
-				if [ -e \"$MNTLIVECD/var/\$CURR\" ]; then \
-					d=\"\$CURR\" ; \
-					case \$d in \
-						lib/rpm*|lib/urpmi*|lib/samba*|lib/mysql*) \
-							[ ! -e \"/var/\$d\" ] && ln -sf \"$MNTLIVECD/var/\$d\" \"/var/\$d\" || true; \
-							;; \
-						cache*|db*|lib*|local*|lock*|log*|mail*|mtink*|nis*|opt*|preserve*|run*|spool*|yp*) \
-							mkdir -p \"/var/\$d\" || true ; \
-							$MNTLIVECD/bin/chown --reference=\"$MNTLIVECD/var/\$d\" \"/var/\$d\" ; \
-							$MNTLIVECD/bin/chmod --reference=\"$MNTLIVECD/var/\$d\" \"/var/\$d\" ; \
-							;; \
-						tmp*) \
-							;; \
-						*) \
-							[ ! -e \"/var/\$d\" ] && ln -sf \"$MNTLIVECD/var/\$d\" \"/var/\$d\" || true; \
-							;; \
-					esac ; \
-					CURR=\"\" ; \
-				fi ; \
-				PREV=\"\$CURR\" ; \
-			done" \
-			"mkdir -p /var/lock/subsys" \
-			"mkdir -p /var/log && touch /var/log/wtmp" \
-			"mkdir -p /var/run && touch /var/run/utmp" \
-			"ln -sf /tmp /var/tmp"
-		set_progress
-		docmd   "Creating /etc structure" \
-			"rm -rf /etc && cp -a $MNTLIVECD/etc /" \
-			"mkdir -p /etc/livecd/hwdetect" \
-			"chmod a+rw /etc" \
-			"rm -rf /etc/fstab && touch /etc/fstab" \
-			"echo 'none      /proc proc  defaults 0 0' >/etc/fstab" \
-			"echo 'none      /dev  devfs defaults 0 0' >>/etc/fstab" \
-			"echo '/dev/rd/3 /     ext2  defaults 0 0' >>/etc/fstab" \
-			"rm -rf /etc/mtab && touch /etc/mtab" \
-			"rm -rf /etc/modules.conf && touch /etc/modules.conf" \
-			"rm -rf /etc/rc.d/rc3.d/S05harddrake" \
-			"rm -rf /etc/rc.d/rc5.d/S05harddrake"
-		set_progress
-		docmd   "Creating user directories" \
-			"cp -a $MNTLIVECD/root /" \
-			"cp -a $MNTLIVECD/home /"
-		set_progress
+		setuproot_normal
 	fi
 }
+
 
 ### setup for init of the actual mdk image
 setupinit() {
