--- a/livecdfs/livecdfs.spec.in
+++ b/livecdfs/livecdfs.spec.in
@@ -1,4 +1,4 @@
-# $Id: livecdfs.spec.in,v 1.10 2004/01/30 19:23:15 jaco Exp $
+# $Id: livecdfs.spec.in,v 1.11 2004/01/30 20:25:56 jaco Exp $
 
 %define name	livecdfs
 %define version	@LIVECDFSVER@
@@ -18,6 +18,7 @@ Group:		System/Configuration/Boot and Init
 URL:		http://livecd.berlios.de/
 Source0:	%{name}-@ARCHIVEVER@.tar.bz2
 Requires:	lufs
+BuildRequires:	glibc-static-devel, libstdc++5-static-devel
 BuildRoot:	%{_tmppath}/%{name}-root
 
 %description
