--- a/mklivecd/src/rc.sysinit.in
+++ b/mklivecd/src/rc.sysinit.in
@@ -20,7 +20,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: rc.sysinit.in,v 1.16 2004/01/30 20:36:57 jaco Exp $
+# $Id: rc.sysinit.in,v 1.17 2004/01/31 07:35:37 jaco Exp $
 #
 
 export PATH=/initrd/bin:/initrd/sbin:/initrd/usr/bin:/initrd/usr/sbin:/bin:/sbin:/usr/bin:/usr/sbin
@@ -164,8 +164,7 @@ execshell() {
 ### setup an overlay fs
 setuproot_overlay() {
 	FSROOT="/.livecdfs"
-	LUFSD="/initrd/usr/sbin/lufsd.livecdfs"
-	LUFSO="fs=livecdfs,own_fs,uid=0,gid=0,fmask=666,dmask=777"
+	FSLOG="$FSROOT/trace."
 	
 	docmd   "Creating overlay structure" \
 		"mkdir -p $FSROOT" \
@@ -188,9 +187,9 @@ setuproot_overlay() {
 					dev|proc|sys|tmp|udev) \
 						;; \
 					*) \
-						rm -rf /\$d ; \ 
-						mkdir -p /\$d $FSROOT/\$d ; \ 
-						$LUFSD none /\$d -o $LUFSO,rw_tmp=$FSROOT/\$d,ro_root=$MNTLIVECD/\$d ; \ 
+						rm -rf /\$d ; \
+						mkdir -p /\$d $FSROOT/\$d ; \
+						/initrd/usr/sbin/lufsd.livecdfs none /\$d -o fs=livecdfs,own_fs,uid=0,gid=0,fmask=666,dmask=777,rw_tmp=$FSROOT/\$d,ro_root=$MNTLIVECD/\$d >$FSLOG\$d ; \
 						;; \
 				esac ; \
 			fi ; \
