--- a/mklivecd/src/rc.sysinit.in
+++ b/mklivecd/src/rc.sysinit.in
@@ -20,7 +20,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: rc.sysinit.in,v 1.19 2004/02/01 07:18:00 jaco Exp $
+# $Id: rc.sysinit.in,v 1.20 2004/02/01 13:04:19 jaco Exp $
 #
 
 export PATH=/initrd/bin:/initrd/sbin:/initrd/usr/bin:/initrd/usr/sbin:/bin:/sbin:/usr/bin:/usr/sbin
@@ -195,7 +195,7 @@ setuproot_overlay() {
 					*) \
 						rm -rf /\$d ; \
 						mkdir -p /\$d $FSROOT/\$d ; \
-						/initrd/usr/sbin/lufsd.livecdfs /\$d -o uid=0,gid=0,rw_tmp=$FSROOT/\$d,ro_root=$MNTLIVECD/\$d >$FSLOG\$d ; \
+						/initrd/usr/sbin/lufsd.livecdfs /\$d -o uid=0,gid=0,dmask=755,rw_tmp=$FSROOT/\$d,ro_root=$MNTLIVECD/\$d >$FSLOG\$d ; \
 						;; \
 				esac ; \
 			fi ; \
